fix spacing issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -30,7 +30,7 @@ main {
     justify-content: center;
     align-items: center;
     margin-bottom: calc(var(--footer-height));
-    padding-top: 20%;
+    padding-top: 10%;
 }
 
 section {
